--- a/BP4DrankGigant/bin/BP4DrankGigant.dll.config
+++ b/BP4DrankGigant/bin/BP4DrankGigant.dll.config
@@ -17,7 +17,7 @@
   <connectionStrings>
     <add name="ConnectieStr"
           providerName="Oracle.ManagedDataAccess.Client"
-          connectionString="User id=dbi322740; password=wDjvYBVqEV; Data Source=//192.168.15.50/fhictora; Pooling=false;"/>
+          connectionString="User id=dbi323305; password=IAzRuOvIGE; Data Source=//192.168.15.50/fhictora; Pooling=false;"/>
   </connectionStrings>
     <system.data>
         <DbProviderFactories>
