--- a/BP4DrankGigant/Web.config
+++ b/BP4DrankGigant/Web.config
@@ -14,6 +14,7 @@
       <compilation debug="true" targetFramework="4.5"/>
       <httpRuntime targetFramework="4.5"/>
     </system.web>
+  <!-- Connnection String-->
   <connectionStrings>
     <add name="ConnectieStr"
           providerName="Oracle.ManagedDataAccess.Client"
@@ -42,5 +43,8 @@
             </dataSources>
         </version>
     </oracle.manageddataaccess.client>
-
+  <!-- Voor de Field Validators-->
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
