--- a/BP4DrankGigant/Web.config
+++ b/BP4DrankGigant/Web.config
@@ -14,7 +14,7 @@
       <compilation debug="true" targetFramework="4.5"/>
       <httpRuntime targetFramework="4.5"/>
     </system.web>
-  <!-- Connnection String-->
+  <!-- Connnection String __ Connectie met VPN database -->
   <connectionStrings>
     <add name="ConnectieStr"
           providerName="Oracle.ManagedDataAccess.Client"
